packages/compiler-rs/tests/snapshots/v_slot__nested_component_slot.snap
---
source: tests/v_slot.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n1 = _createComponent(A, null, { default: () => {
    const n0 = _createComponent(B);
    return n0;
  } }, true);
  return n1;
})();
