packages/compiler-rs/tests/snapshots/v_slot__on_component_named_slot_multiple.snap
---
source: tests/v_slot.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { template as _template } from "vue";
const t0 = _template("foo");
(() => {
  const n10 = _createComponent(Comp, null, {
    left: () => {
      const n1 = t0();
      return n1;
    },
    right: () => {
      const n6 = _createComponent(Comp, null, { left: () => {
        const n5 = t0();
        return n5;
      } });
      return n6;
    }
  }, true);
  return n10;
})();
